// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<CustomLayout> should match snapshot 1`] = `
Array [
  <main />,
  .emotion-0 {
  position: fixed;
  top: 0px;
  bottom: 0px;
  left: 0px;
  right: 0px;
  z-index: 10;
  height: 100vh;
  pointer-events: none;
}

.emotion-1 {
  position: absolute;
  top: 0px;
  left: 0px;
  z-index: 10;
  pointer-events: none;
  --tw-bg-opacity: 1;
  width: 4.5rem;
  height: 4.5rem;
  background-color: rgba(18, 18, 18, var(--tw-bg-opacity));
  opacity: 0.75;
  border-color: rgba(255, 255, 255, 0.3);
  border-width: 0.1875rem;
  border-radius: 9999px;
  transition-property: all;
  transition-timing-function: cubic-bezier(0, 0, 0.2, 1);
  transition-duration: 100ms;
}

@media (prefers-reduced-motion: reduce) {
  .emotion-1 {
    -webkit-transform: none;
    -moz-transform: none;
    -ms-transform: none;
    transform: none;
  }
}

<span
    className="emotion-0"
  >
    <span
      className="emotion-1"
      hidden={false}
      style={
        Object {
          "left": -36,
          "top": -36,
        }
      }
    />
  </span>,
  <svg
    className="custom-layout-bg"
    fill="none"
    xmlns="http://www.w3.org/2000/svg"
  >
    <g
      clipPath="url(#clip0_67_276)"
      filter="url(#filter0_d_67_276)"
      opacity="0.1"
    >
      <rect
        fill="black"
        height="1200"
        width="1920"
      />
      <g
        filter="url(#filter1_f_67_276)"
      >
        <ellipse
          cx="437.021"
          cy="607.255"
          fill="#0057FF"
          rx="661.46"
          ry="155.843"
          transform="rotate(-13.5173 437.021 607.255)"
        />
      </g>
      <g
        filter="url(#filter2_f_67_276)"
      >
        <ellipse
          cx="524.281"
          cy="792.944"
          fill="#00FFFF"
          rx="760.779"
          ry="258.856"
          transform="rotate(-9.66573 524.281 792.944)"
        />
      </g>
      <g
        filter="url(#filter3_f_67_276)"
      >
        <ellipse
          cx="1169.5"
          cy="691.5"
          fill="#EC3039"
          rx="491.5"
          ry="346.5"
        />
      </g>
      <g
        filter="url(#filter4_f_67_276)"
      >
        <ellipse
          cx="1065.77"
          cy="966.366"
          fill="#00ED97"
          rx="539.252"
          ry="329.864"
          transform="rotate(28.5377 1065.77 966.366)"
        />
      </g>
      <g
        filter="url(#filter5_f_67_276)"
      >
        <ellipse
          cx="1408.79"
          cy="741.747"
          fill="#FFA467"
          rx="340.036"
          ry="264.542"
          transform="rotate(14.8265 1408.79 741.747)"
        />
      </g>
    </g>
    <defs>
      <filter
        colorInterpolationFilters="sRGB"
        filterUnits="userSpaceOnUse"
        height="1208"
        id="filter0_d_67_276"
        width="1928"
        x="-4"
        y="0"
      >
        <feFlood
          floodOpacity="0"
          result="BackgroundImageFix"
        />
        <feColorMatrix
          in="SourceAlpha"
          result="hardAlpha"
          type="matrix"
          values="0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 127 0"
        />
        <feOffset
          dy="4"
        />
        <feGaussianBlur
          stdDeviation="2"
        />
        <feComposite
          in2="hardAlpha"
          operator="out"
        />
        <feColorMatrix
          type="matrix"
          values="0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0.25 0"
        />
        <feBlend
          in2="BackgroundImageFix"
          mode="normal"
          result="effect1_dropShadow_67_276"
        />
        <feBlend
          in="SourceGraphic"
          in2="effect1_dropShadow_67_276"
          mode="normal"
          result="shape"
        />
      </filter>
      <filter
        colorInterpolationFilters="sRGB"
        filterUnits="userSpaceOnUse"
        height="1032.96"
        id="filter1_f_67_276"
        width="1888.37"
        x="-507.164"
        y="90.7744"
      >
        <feFlood
          floodOpacity="0"
          result="BackgroundImageFix"
        />
        <feBlend
          in="SourceGraphic"
          in2="BackgroundImageFix"
          mode="normal"
          result="shape"
        />
        <feGaussianBlur
          result="effect1_foregroundBlur_67_276"
          stdDeviation="150"
        />
      </filter>
      <filter
        colorInterpolationFilters="sRGB"
        filterUnits="userSpaceOnUse"
        height="1170.86"
        id="filter2_f_67_276"
        width="2102.52"
        x="-526.98"
        y="207.515"
      >
        <feFlood
          floodOpacity="0"
          result="BackgroundImageFix"
        />
        <feBlend
          in="SourceGraphic"
          in2="BackgroundImageFix"
          mode="normal"
          result="shape"
        />
        <feGaussianBlur
          result="effect1_foregroundBlur_67_276"
          stdDeviation="150"
        />
      </filter>
      <filter
        colorInterpolationFilters="sRGB"
        filterUnits="userSpaceOnUse"
        height="1293"
        id="filter3_f_67_276"
        width="1583"
        x="378"
        y="45"
      >
        <feFlood
          floodOpacity="0"
          result="BackgroundImageFix"
        />
        <feBlend
          in="SourceGraphic"
          in2="BackgroundImageFix"
          mode="normal"
          result="shape"
        />
        <feGaussianBlur
          result="effect1_foregroundBlur_67_276"
          stdDeviation="150"
        />
      </filter>
      <filter
        colorInterpolationFilters="sRGB"
        filterUnits="userSpaceOnUse"
        height="1175.49"
        id="filter4_f_67_276"
        width="1398.79"
        x="366.375"
        y="378.619"
      >
        <feFlood
          floodOpacity="0"
          result="BackgroundImageFix"
        />
        <feBlend
          in="SourceGraphic"
          in2="BackgroundImageFix"
          mode="normal"
          result="shape"
        />
        <feGaussianBlur
          result="effect1_foregroundBlur_67_276"
          stdDeviation="100"
        />
      </filter>
      <filter
        colorInterpolationFilters="sRGB"
        filterUnits="userSpaceOnUse"
        height="940.411"
        id="filter5_f_67_276"
        width="1071.36"
        x="873.113"
        y="271.542"
      >
        <feFlood
          floodOpacity="0"
          result="BackgroundImageFix"
        />
        <feBlend
          in="SourceGraphic"
          in2="BackgroundImageFix"
          mode="normal"
          result="shape"
        />
        <feGaussianBlur
          result="effect1_foregroundBlur_67_276"
          stdDeviation="100"
        />
      </filter>
      <clipPath
        id="clip0_67_276"
      >
        <rect
          fill="white"
          height="1200"
          width="1920"
        />
      </clipPath>
    </defs>
  </svg>,
]
`;

exports[`<CustomLayout> should match snapshot on desktop: desktop 1`] = `
Array [
  <main />,
  .emotion-0 {
  position: fixed;
  top: 0px;
  bottom: 0px;
  left: 0px;
  right: 0px;
  z-index: 10;
  height: 100vh;
  pointer-events: none;
}

.emotion-1 {
  position: absolute;
  top: 0px;
  left: 0px;
  z-index: 10;
  pointer-events: none;
  --tw-bg-opacity: 1;
  width: 4.5rem;
  height: 4.5rem;
  background-color: rgba(18, 18, 18, var(--tw-bg-opacity));
  opacity: 0.75;
  border-color: rgba(255, 255, 255, 0.3);
  border-width: 0.1875rem;
  border-radius: 9999px;
  transition-property: all;
  transition-timing-function: cubic-bezier(0, 0, 0.2, 1);
  transition-duration: 100ms;
}

@media (prefers-reduced-motion: reduce) {
  .emotion-1 {
    -webkit-transform: none;
    -moz-transform: none;
    -ms-transform: none;
    transform: none;
  }
}

<span
    className="emotion-0"
  >
    <span
      className="emotion-1"
      hidden={false}
      style={
        Object {
          "left": -36,
          "top": -36,
        }
      }
    />
  </span>,
  <svg
    className="custom-layout-bg"
    fill="none"
    xmlns="http://www.w3.org/2000/svg"
  >
    <g
      clipPath="url(#clip0_67_276)"
      filter="url(#filter0_d_67_276)"
      opacity="0.1"
    >
      <rect
        fill="black"
        height="1200"
        width="1920"
      />
      <g
        filter="url(#filter1_f_67_276)"
      >
        <ellipse
          cx="437.021"
          cy="607.255"
          fill="#0057FF"
          rx="661.46"
          ry="155.843"
          transform="rotate(-13.5173 437.021 607.255)"
        />
      </g>
      <g
        filter="url(#filter2_f_67_276)"
      >
        <ellipse
          cx="524.281"
          cy="792.944"
          fill="#00FFFF"
          rx="760.779"
          ry="258.856"
          transform="rotate(-9.66573 524.281 792.944)"
        />
      </g>
      <g
        filter="url(#filter3_f_67_276)"
      >
        <ellipse
          cx="1169.5"
          cy="691.5"
          fill="#EC3039"
          rx="491.5"
          ry="346.5"
        />
      </g>
      <g
        filter="url(#filter4_f_67_276)"
      >
        <ellipse
          cx="1065.77"
          cy="966.366"
          fill="#00ED97"
          rx="539.252"
          ry="329.864"
          transform="rotate(28.5377 1065.77 966.366)"
        />
      </g>
      <g
        filter="url(#filter5_f_67_276)"
      >
        <ellipse
          cx="1408.79"
          cy="741.747"
          fill="#FFA467"
          rx="340.036"
          ry="264.542"
          transform="rotate(14.8265 1408.79 741.747)"
        />
      </g>
    </g>
    <defs>
      <filter
        colorInterpolationFilters="sRGB"
        filterUnits="userSpaceOnUse"
        height="1208"
        id="filter0_d_67_276"
        width="1928"
        x="-4"
        y="0"
      >
        <feFlood
          floodOpacity="0"
          result="BackgroundImageFix"
        />
        <feColorMatrix
          in="SourceAlpha"
          result="hardAlpha"
          type="matrix"
          values="0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 127 0"
        />
        <feOffset
          dy="4"
        />
        <feGaussianBlur
          stdDeviation="2"
        />
        <feComposite
          in2="hardAlpha"
          operator="out"
        />
        <feColorMatrix
          type="matrix"
          values="0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0.25 0"
        />
        <feBlend
          in2="BackgroundImageFix"
          mode="normal"
          result="effect1_dropShadow_67_276"
        />
        <feBlend
          in="SourceGraphic"
          in2="effect1_dropShadow_67_276"
          mode="normal"
          result="shape"
        />
      </filter>
      <filter
        colorInterpolationFilters="sRGB"
        filterUnits="userSpaceOnUse"
        height="1032.96"
        id="filter1_f_67_276"
        width="1888.37"
        x="-507.164"
        y="90.7744"
      >
        <feFlood
          floodOpacity="0"
          result="BackgroundImageFix"
        />
        <feBlend
          in="SourceGraphic"
          in2="BackgroundImageFix"
          mode="normal"
          result="shape"
        />
        <feGaussianBlur
          result="effect1_foregroundBlur_67_276"
          stdDeviation="150"
        />
      </filter>
      <filter
        colorInterpolationFilters="sRGB"
        filterUnits="userSpaceOnUse"
        height="1170.86"
        id="filter2_f_67_276"
        width="2102.52"
        x="-526.98"
        y="207.515"
      >
        <feFlood
          floodOpacity="0"
          result="BackgroundImageFix"
        />
        <feBlend
          in="SourceGraphic"
          in2="BackgroundImageFix"
          mode="normal"
          result="shape"
        />
        <feGaussianBlur
          result="effect1_foregroundBlur_67_276"
          stdDeviation="150"
        />
      </filter>
      <filter
        colorInterpolationFilters="sRGB"
        filterUnits="userSpaceOnUse"
        height="1293"
        id="filter3_f_67_276"
        width="1583"
        x="378"
        y="45"
      >
        <feFlood
          floodOpacity="0"
          result="BackgroundImageFix"
        />
        <feBlend
          in="SourceGraphic"
          in2="BackgroundImageFix"
          mode="normal"
          result="shape"
        />
        <feGaussianBlur
          result="effect1_foregroundBlur_67_276"
          stdDeviation="150"
        />
      </filter>
      <filter
        colorInterpolationFilters="sRGB"
        filterUnits="userSpaceOnUse"
        height="1175.49"
        id="filter4_f_67_276"
        width="1398.79"
        x="366.375"
        y="378.619"
      >
        <feFlood
          floodOpacity="0"
          result="BackgroundImageFix"
        />
        <feBlend
          in="SourceGraphic"
          in2="BackgroundImageFix"
          mode="normal"
          result="shape"
        />
        <feGaussianBlur
          result="effect1_foregroundBlur_67_276"
          stdDeviation="100"
        />
      </filter>
      <filter
        colorInterpolationFilters="sRGB"
        filterUnits="userSpaceOnUse"
        height="940.411"
        id="filter5_f_67_276"
        width="1071.36"
        x="873.113"
        y="271.542"
      >
        <feFlood
          floodOpacity="0"
          result="BackgroundImageFix"
        />
        <feBlend
          in="SourceGraphic"
          in2="BackgroundImageFix"
          mode="normal"
          result="shape"
        />
        <feGaussianBlur
          result="effect1_foregroundBlur_67_276"
          stdDeviation="100"
        />
      </filter>
      <clipPath
        id="clip0_67_276"
      >
        <rect
          fill="white"
          height="1200"
          width="1920"
        />
      </clipPath>
    </defs>
  </svg>,
]
`;

exports[`<CustomLayout> should match snapshot on mobile: mobile 1`] = `
Array [
  <main />,
  <svg
    className="custom-layout-bg"
    fill="none"
    xmlns="http://www.w3.org/2000/svg"
  >
    <g
      clipPath="url(#clip0_67_276)"
      filter="url(#filter0_d_67_276)"
      opacity="0.1"
    >
      <rect
        fill="black"
        height="1200"
        width="1920"
      />
      <g
        filter="url(#filter1_f_67_276)"
      >
        <ellipse
          cx="437.021"
          cy="607.255"
          fill="#0057FF"
          rx="661.46"
          ry="155.843"
          transform="rotate(-13.5173 437.021 607.255)"
        />
      </g>
      <g
        filter="url(#filter2_f_67_276)"
      >
        <ellipse
          cx="524.281"
          cy="792.944"
          fill="#00FFFF"
          rx="760.779"
          ry="258.856"
          transform="rotate(-9.66573 524.281 792.944)"
        />
      </g>
      <g
        filter="url(#filter3_f_67_276)"
      >
        <ellipse
          cx="1169.5"
          cy="691.5"
          fill="#EC3039"
          rx="491.5"
          ry="346.5"
        />
      </g>
      <g
        filter="url(#filter4_f_67_276)"
      >
        <ellipse
          cx="1065.77"
          cy="966.366"
          fill="#00ED97"
          rx="539.252"
          ry="329.864"
          transform="rotate(28.5377 1065.77 966.366)"
        />
      </g>
      <g
        filter="url(#filter5_f_67_276)"
      >
        <ellipse
          cx="1408.79"
          cy="741.747"
          fill="#FFA467"
          rx="340.036"
          ry="264.542"
          transform="rotate(14.8265 1408.79 741.747)"
        />
      </g>
    </g>
    <defs>
      <filter
        colorInterpolationFilters="sRGB"
        filterUnits="userSpaceOnUse"
        height="1208"
        id="filter0_d_67_276"
        width="1928"
        x="-4"
        y="0"
      >
        <feFlood
          floodOpacity="0"
          result="BackgroundImageFix"
        />
        <feColorMatrix
          in="SourceAlpha"
          result="hardAlpha"
          type="matrix"
          values="0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 127 0"
        />
        <feOffset
          dy="4"
        />
        <feGaussianBlur
          stdDeviation="2"
        />
        <feComposite
          in2="hardAlpha"
          operator="out"
        />
        <feColorMatrix
          type="matrix"
          values="0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0.25 0"
        />
        <feBlend
          in2="BackgroundImageFix"
          mode="normal"
          result="effect1_dropShadow_67_276"
        />
        <feBlend
          in="SourceGraphic"
          in2="effect1_dropShadow_67_276"
          mode="normal"
          result="shape"
        />
      </filter>
      <filter
        colorInterpolationFilters="sRGB"
        filterUnits="userSpaceOnUse"
        height="1032.96"
        id="filter1_f_67_276"
        width="1888.37"
        x="-507.164"
        y="90.7744"
      >
        <feFlood
          floodOpacity="0"
          result="BackgroundImageFix"
        />
        <feBlend
          in="SourceGraphic"
          in2="BackgroundImageFix"
          mode="normal"
          result="shape"
        />
        <feGaussianBlur
          result="effect1_foregroundBlur_67_276"
          stdDeviation="150"
        />
      </filter>
      <filter
        colorInterpolationFilters="sRGB"
        filterUnits="userSpaceOnUse"
        height="1170.86"
        id="filter2_f_67_276"
        width="2102.52"
        x="-526.98"
        y="207.515"
      >
        <feFlood
          floodOpacity="0"
          result="BackgroundImageFix"
        />
        <feBlend
          in="SourceGraphic"
          in2="BackgroundImageFix"
          mode="normal"
          result="shape"
        />
        <feGaussianBlur
          result="effect1_foregroundBlur_67_276"
          stdDeviation="150"
        />
      </filter>
      <filter
        colorInterpolationFilters="sRGB"
        filterUnits="userSpaceOnUse"
        height="1293"
        id="filter3_f_67_276"
        width="1583"
        x="378"
        y="45"
      >
        <feFlood
          floodOpacity="0"
          result="BackgroundImageFix"
        />
        <feBlend
          in="SourceGraphic"
          in2="BackgroundImageFix"
          mode="normal"
          result="shape"
        />
        <feGaussianBlur
          result="effect1_foregroundBlur_67_276"
          stdDeviation="150"
        />
      </filter>
      <filter
        colorInterpolationFilters="sRGB"
        filterUnits="userSpaceOnUse"
        height="1175.49"
        id="filter4_f_67_276"
        width="1398.79"
        x="366.375"
        y="378.619"
      >
        <feFlood
          floodOpacity="0"
          result="BackgroundImageFix"
        />
        <feBlend
          in="SourceGraphic"
          in2="BackgroundImageFix"
          mode="normal"
          result="shape"
        />
        <feGaussianBlur
          result="effect1_foregroundBlur_67_276"
          stdDeviation="100"
        />
      </filter>
      <filter
        colorInterpolationFilters="sRGB"
        filterUnits="userSpaceOnUse"
        height="940.411"
        id="filter5_f_67_276"
        width="1071.36"
        x="873.113"
        y="271.542"
      >
        <feFlood
          floodOpacity="0"
          result="BackgroundImageFix"
        />
        <feBlend
          in="SourceGraphic"
          in2="BackgroundImageFix"
          mode="normal"
          result="shape"
        />
        <feGaussianBlur
          result="effect1_foregroundBlur_67_276"
          stdDeviation="100"
        />
      </filter>
      <clipPath
        id="clip0_67_276"
      >
        <rect
          fill="white"
          height="1200"
          width="1920"
        />
      </clipPath>
    </defs>
  </svg>,
]
`;
